<resources>
    <string name="app_name">CourseProject</string>
    <string name="add_delete_activity_stock_name">Stock Name</string>
    <string name="details_country">Country:</string>
    <string name="display_stock">Stock:</string>
    <string name="display_exchange">Exchange:</string>
    <string name="display_industry">Industry:</string>
    <string name="display_name">Name:</string>
    <string name="display_currency">Currency:</string>
    <string name="display_url">WebUrl:</string>
</resources>